# jsonrpsee-eclipse-verify

./: .gitignore  Cargo.toml  README.md
script/: client.sh  server.sh
src/: entity.rs  lib.rs  main.rs  query.rs
