[package]
name = "jsonrpsee-eclipse-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }
simplelog = "0.12.0"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.6"
sea-query = "0.28.3"
